--- a/edit.html
+++ b/edit.html
@@ -20,7 +20,7 @@
 <body>
   <main>
     <form action="http://se.shenkar.ac.il/students/2022-2023/web1/dev_74/exercises/ex4/edit.php" method="GET">
-      <h3><b>Hello!</b><br>Here you can buy a plot of land in another planet </h3>
+      <h3><b>Hello!</b><br>Here you can buy a piece of land on another planet. </h3>
       <label>choose Planet:<select name="Planet" id="Planet-select" class="form-control" required>
           <option value="1">Moon</option>
           <option value="2">Jupiter</option>
@@ -76,7 +76,7 @@
     </div>
     <div class="card mb-3">
       <div class="card-body moon">
-        <h5>his is Moon &#9789;</h5>
+        <h5>Moon &#9789;</h5>
         <p>Mars is among the brightest objects in Earth's sky. The planet is also an attractive target for viewing with
           a telescope due to its high-contrast albedo features. Therefore, Mars has exerted significant cultural
           influence, in English the name "Mars" was originated from the Roman god of war. Mars is an attractive target
@@ -84,7 +84,7 @@
         <a href="https://en.wikipedia.org/wiki/Moon" class="btn btn-primary" target="_blank">More info</a>
       </div>
       <div class="card-body jupiter">
-        <h5>his is Jupiter &#9795;</h5>
+        <h5>Jupiter &#9795;</h5>
         <p>Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass
           more than two and a half times that of all the other planets in the Solar System combined, and slightly less
           than one one-thousandth the mass of the Sun. It was named after Jupiter, the chief deity of ancient Roman
@@ -92,7 +92,7 @@
         <a href="https://en.wikipedia.org/wiki/Jupiter" class="btn btn-primary" target="_blank">More info</a>
       </div>
       <div class="card-body mars">
-        <h5>his is Mars &#9794;</h5>
+        <h5>Mars &#9794;</h5>
         <p>Mars is among the brightest objects in Earth's sky. The planet is also an attractive target for viewing with
           a telescope due to its high-contrast albedo features. Therefore, Mars has exerted significant cultural
           influence, in English the name "Mars" was originated from the Roman god of war. Mars is an attractive target
@@ -100,7 +100,7 @@
         <a href="https://en.wikipedia.org/wiki/Mars" class="btn btn-primary" target="_blank">More info</a>
       </div>
       <div class="card-body saturn">
-        <h5>his is Saturn &#9796;</h5>
+        <h5>Saturn &#9796;</h5>
         <p>Saturn is the sixth planet from the Sun and has an intricate dazzling ring system. It is the second-largest
           planet in the Solar System, and with 96% of the planet is made out of lightweight hydrogen, Saturn is also the
           least dense planet in the Solar System. oval-shaped storms would trail across Saturn's atmosphere, the biggest
@@ -109,7 +109,7 @@
         <a href="https://en.wikipedia.org/wiki/Saturn" class="btn btn-primary" target="_blank">More info</a>
       </div>
       <div class="card-body venus">
-        <h5>his is Venus &#9792;</h5>
+        <h5>Venus &#9792;</h5>
         <p>Venus is the second planet from the Sun. It is a terrestrial planet and the only one of the Solar System with
           a substantial and thicker atmosphere other than Earth. Venus is the only Solar System object with a size and
           mass close to Earth's. Orbiting the Sun, next closer than Earth, inside of Earth's orbit, makes Venus an inner
@@ -117,21 +117,21 @@
         <a href="https://en.wikipedia.org/wiki/Venus" class="btn btn-primary" target="_blank">More info</a>
       </div>
       <div class="card-body neptune">
-        <h5>his is Neptune &#9798;</h5>
+        <h5>Neptune &#9798;</h5>
         <p>Neptune is the eighth planet from the Sun and the farthest known planet in the Solar System. It is the
           fourth-largest planet in the Solar System by diameter, the third-most-massive planet, and the densest giant
           planet. It is 17 times the mass of Earth, It is named after the Roman god of the sea.</p>
         <a href="https://en.wikipedia.org/wiki/Neptune" class="btn btn-primary" target="_blank">More info</a>
       </div>
       <div class="card-body mercury">
-        <h5>his is Mercury &#9791;</h5>
+        <h5>Mercury &#9791;</h5>
         <p> Mercury is the first planet from the Sun and the smallest planet in the Solar System. It is a terrestrial
           planet with a heavily cratered surface due to the planet having no geological activity and an extremely
           tenuous atmosphere The Romans named the planet after the swift-footed Roman messenger god</p>
         <a href="https://en.wikipedia.org/wiki/Mercury_(planet)" class="btn btn-primary" target="_blank">More info</a>
       </div>
       <div class="card-body uranus">
-        <h5>his is Uranus &#9954;</h5>
+        <h5>Uranus &#9954;</h5>
         <p>Uranus is the seventh planet from the Sun and is a gaseous cyan ice giant. Most of Uranus is made out of
           water and methane in a supercritical phase of matter, which in astronomy is called 'ice' or
           volatiles.he name of Uranus references the ancient Greek deity of the sky Uranus. </p>
